--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,15 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "target": "es2017",
+    "target": "ESNext",
     "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "plugins": [
       {
