--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.41.1",
+    "bcrypt": "5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -34,6 +36,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsconfig-paths": "^4.2.0",
+    "type": "module",
     "typescript": "^5.7.2"
   }
 }
