--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
+    "nanoid": "^5.0.9",
     "next": "^15.1.3",
     "react": "^18",
     "react-dom": "^18",
