--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.9.2",
     "nanoid": "^5.0.9",
     "next": "^15.1.3",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
@@ -30,6 +31,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "dependency-cruiser": "^16.9.0",
