--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-slick": "^0.23.13",
     "argon2": "^0.41.1",
     "bcrypt": "5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +24,8 @@
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
