--- a/package.json
+++ b/package.json
@@ -2,26 +2,33 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "crawler": "cross-env TS_NODE_PROJECT=\"./tsconfig.json\" NODE_ENV=development node --experimental-specifier-resolution=node --loader ts-node/esm scripts/testCrawler.ts"
   },
   "dependencies": {
+    "@types/puppeteer-core": "^7.0.4",
     "@types/react-slick": "^0.23.13",
     "argon2": "^0.41.1",
     "bcrypt": "5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
+    "module-alias": "^2.2.3",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "nanoid": "^5.0.9",
     "next": "^15.1.3",
     "nodemailer": "^6.9.16",
+    "openai": "^4.78.1",
+    "puppeteer": "^24.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.3",
@@ -32,18 +39,25 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/iconv-lite": "^0.0.1",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
     "dependency-cruiser": "^16.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "type": "module",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
+  },
+  "_moduleAliases": {
+    "@": ".",
+    "@/lib": "./lib"
   }
 }
