--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "crawler": "cross-env TS_NODE_PROJECT=\"./tsconfig.json\" NODE_ENV=development node --experimental-specifier-resolution=node --loader ts-node/esm scripts/testCrawler.ts"
   },
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
+    "@types/node-notifier": "^8.0.5",
     "@types/puppeteer-core": "^7.0.4",
     "@types/react-slick": "^0.23.13",
     "argon2": "^0.41.1",
@@ -26,6 +28,8 @@
     "mongoose": "^8.9.2",
     "nanoid": "^5.0.9",
     "next": "^15.1.3",
+    "node-cron": "^3.0.3",
+    "node-notifier": "^10.0.1",
     "nodemailer": "^6.9.16",
     "openai": "^4.78.1",
     "puppeteer": "^24.1.0",
