--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "generate-token": "node scripts/generateAdminToken.js",
     "crawler": "cross-env TS_NODE_PROJECT=\"./tsconfig.json\" NODE_ENV=development node --experimental-specifier-resolution=node --loader ts-node/esm scripts/testCrawler.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@types/node-cron": "^3.0.11",
     "@types/node-notifier": "^8.0.5",
     "@types/puppeteer-core": "^7.0.4",
     "@types/react-slick": "^0.23.13",
     "argon2": "^0.41.1",
-    "bcrypt": "5.1.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -25,14 +28,17 @@
     "lucide-react": "^0.469.0",
     "module-alias": "^2.2.3",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.2",
+    "mongoose": "^8.10.0",
     "nanoid": "^5.0.9",
     "next": "^15.1.3",
+    "next-auth": "^4.24.11",
     "node-cron": "^3.0.3",
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.9.16",
-    "openai": "^4.78.1",
+    "openai": "^4.83.0",
     "puppeteer": "^24.1.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.3",
@@ -44,9 +50,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/iconv-lite": "^0.0.1",
-    "@types/jsonwebtoken": "^9.0.7",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/module-alias": "^2.0.4",
-    "@types/node": "^20",
+    "@types/next-auth": "^3.13.0",
+    "@types/node": "^20.17.17",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
