--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crawler": "cross-env TS_NODE_PROJECT=\"./tsconfig.json\" NODE_ENV=development node --experimental-specifier-resolution=node --loader ts-node/esm scripts/testCrawler.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@types/node-cron": "^3.0.11",
     "@types/node-notifier": "^8.0.5",
@@ -41,10 +42,12 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
