--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "crawler": "cross-env TS_NODE_PROJECT=\"./tsconfig.json\" NODE_ENV=development node --experimental-specifier-resolution=node --loader ts-node/esm scripts/testCrawler.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-toast": "^1.2.6",
     "@types/node-cron": "^3.0.11",
     "@types/node-notifier": "^8.0.5",
     "@types/puppeteer-core": "^7.0.4",
@@ -21,14 +24,18 @@
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.2",
     "iconv-lite": "^0.6.3",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "module-alias": "^2.2.3",
-    "mongodb": "^6.12.0",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "nanoid": "^5.0.9",
     "next": "^15.1.3",
@@ -41,6 +48,8 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18",
+    "react-color": "^2.19.3",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.3",
@@ -59,6 +68,7 @@
     "@types/node": "^20.17.17",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
     "cross-env": "^7.0.3",
     "dependency-cruiser": "^16.9.0",
